# code-review-env

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  write_env.py
server/: app.py
src/: env.py  openenv.yaml
