[project]
name = "code-review-env"
version = "1.0.0"
description = "An RL environment where an AI agent debugs and fixes broken SQL queries"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"